Avoid iterrows in conflict repair for performance reasons

--- a/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
+++ b/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
@@ -690,20 +690,20 @@
        "10F       5\n",
        "02B       4\n",
        "06C       4\n",
-       "06D       3\n",
-       "22F       3\n",
        "02G       3\n",
-       "10B       2\n",
+       "22F       3\n",
+       "06D       3\n",
        "06B       2\n",
        "22G       2\n",
-       "05A       1\n",
-       "04N       1\n",
-       "04F       1\n",
-       "04K       1\n",
+       "10B       2\n",
        "04M       1\n",
-       "09B       1\n",
        "04H       1\n",
+       "04K       1\n",
+       "05A       1\n",
+       "09B       1\n",
        "10D       1\n",
+       "04F       1\n",
+       "04N       1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
@@ -730,9 +730,9 @@
        "02G    10\n",
        "04L     8\n",
        "06D     8\n",
+       "10F     7\n",
        "06C     7\n",
        "02B     7\n",
-       "10F     7\n",
        "06E     6\n",
        "04H     4\n",
        "05D     4\n",
@@ -741,17 +741,17 @@
        "04A     3\n",
        "06F     2\n",
        "04N     2\n",
-       "09B     2\n",
        "06A     2\n",
        "10I     2\n",
+       "09B     2\n",
        "10H     2\n",
-       "04C     1\n",
        "07A     1\n",
+       "04C     1\n",
+       "03A     1\n",
+       "06B     1\n",
        "09C     1\n",
        "04K     1\n",
        "08C     1\n",
-       "03A     1\n",
-       "06B     1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
@@ -893,7 +893,7 @@
     "# Repair violations of FD. Use majority voting for 'INSPECTION TYPE' and 'SCORE'\n",
     "# for groups of rows wth violations.\n",
     "\n",
-    "from openclean.operator.map.repair import Shortest, Vote, conflict_repair\n",
+    "from openclean.operator.collector.repair import Shortest, Vote, conflict_repair\n",
     "\n",
     "# Define the conflict resolution strategy. We use majority vote for both RHS attributes.\n",
     "# In one case (CAMIS=40894333) values for 'INSPECTION TYPE' in the conflict group are\n",
@@ -901,7 +901,7 @@
     "# the shorter of the two values.\n",
     "strategy = {'INSPECTION TYPE': Vote(tiebreaker=Shortest()), 'SCORE': Vote()}\n",
     "\n",
-    "df = conflict_repair(conflicts=fd1_violations, strategy=strategy)"
+    "df = conflict_repair(conflicts=fd1_violations, strategy=strategy, in_order=False)"
    ]
   },
   {
@@ -1118,12 +1118,12 @@
        "3  50041601  Manhattan             Tex-Mex      2019-05-09   \n",
        "4  50045596      Bronx             Chinese      2016-09-07   \n",
        "\n",
-       "                         INSPECTION TYPE  SCORE  \n",
-       "0  Cycle Inspection / Initial Inspection     19  \n",
-       "1       Cycle Inspection / Re-inspection     27  \n",
-       "2  Cycle Inspection / Initial Inspection     24  \n",
-       "3  Cycle Inspection / Initial Inspection     11  \n",
-       "4       Cycle Inspection / Re-inspection     12  "
+       "                         INSPECTION TYPE SCORE  \n",
+       "0  Cycle Inspection / Initial Inspection    19  \n",
+       "1       Cycle Inspection / Re-inspection    27  \n",
+       "2  Cycle Inspection / Initial Inspection    24  \n",
+       "3  Cycle Inspection / Initial Inspection    11  \n",
+       "4       Cycle Inspection / Re-inspection    12  "
       ]
      },
      "execution_count": 23,
@@ -1149,32 +1149,32 @@
       "\n",
       "CAMIS=40911114\n",
       "\n",
-      "       INSPECTION DATE  SCORE                        INSPECTION TYPE\n",
-      "14420       2017-11-04     20  Cycle Inspection / Initial Inspection\n",
-      "9923        2018-03-23      5       Cycle Inspection / Re-inspection\n",
-      "147506      2019-05-16      7  Cycle Inspection / Initial Inspection\n",
+      "       INSPECTION DATE SCORE                        INSPECTION TYPE\n",
+      "14420       2017-11-04    20  Cycle Inspection / Initial Inspection\n",
+      "9923        2018-03-23     5       Cycle Inspection / Re-inspection\n",
+      "147506      2019-05-16     7  Cycle Inspection / Initial Inspection\n",
       "\n",
       "CAMIS=50001317\n",
       "\n",
-      "       INSPECTION DATE  SCORE                        INSPECTION TYPE\n",
-      "39400       2016-03-10     13  Cycle Inspection / Initial Inspection\n",
-      "38971       2017-05-04     12  Cycle Inspection / Initial Inspection\n",
-      "0           2018-05-04     19  Cycle Inspection / Initial Inspection\n",
-      "113508      2018-07-05     12       Cycle Inspection / Re-inspection\n",
-      "45619       2018-12-03     12  Cycle Inspection / Initial Inspection\n",
+      "       INSPECTION DATE SCORE                        INSPECTION TYPE\n",
+      "39400       2016-03-10    13  Cycle Inspection / Initial Inspection\n",
+      "38971       2017-05-04    12  Cycle Inspection / Initial Inspection\n",
+      "0           2018-05-04    19  Cycle Inspection / Initial Inspection\n",
+      "113508      2018-07-05    12       Cycle Inspection / Re-inspection\n",
+      "45619       2018-12-03    12  Cycle Inspection / Initial Inspection\n",
       "\n",
       "CAMIS=50044535\n",
       "\n",
-      "       INSPECTION DATE  SCORE                                INSPECTION TYPE\n",
-      "234918      2015-12-16     16  Pre-permit (Operational) / Initial Inspection\n",
-      "4327        2016-01-12     13       Pre-permit (Operational) / Re-inspection\n",
-      "89129       2016-09-21     14          Cycle Inspection / Initial Inspection\n",
-      "65087       2016-11-03     10               Cycle Inspection / Re-inspection\n",
-      "2           2017-06-14     24          Cycle Inspection / Initial Inspection\n",
-      "173318      2017-08-15     12               Cycle Inspection / Re-inspection\n",
-      "21837       2018-02-28     17          Cycle Inspection / Initial Inspection\n",
-      "78332       2018-04-24     12               Cycle Inspection / Re-inspection\n",
-      "54655       2018-09-19     11          Cycle Inspection / Initial Inspection\n"
+      "       INSPECTION DATE SCORE                                INSPECTION TYPE\n",
+      "234918      2015-12-16    16  Pre-permit (Operational) / Initial Inspection\n",
+      "4327        2016-01-12    13       Pre-permit (Operational) / Re-inspection\n",
+      "89129       2016-09-21    14          Cycle Inspection / Initial Inspection\n",
+      "65087       2016-11-03    10               Cycle Inspection / Re-inspection\n",
+      "2           2017-06-14    24          Cycle Inspection / Initial Inspection\n",
+      "173318      2017-08-15    12               Cycle Inspection / Re-inspection\n",
+      "21837       2018-02-28    17          Cycle Inspection / Initial Inspection\n",
+      "78332       2018-04-24    12               Cycle Inspection / Re-inspection\n",
+      "54655       2018-09-19    11          Cycle Inspection / Initial Inspection\n"
      ]
     }
    ],
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "<AxesSubplot:xlabel='SCORE', ylabel='Count'>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
