Refactor data repositories that provide access to open data

--- a/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
@@ -6,21 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the full 'DOB Job Application Fiings' dataset. This file is about 1GB (XXXMB gzipped).\n",
-    "# To avoid downloading the full file into memory first the streaing option is used (based on\n",
-    "# https://stackoverflow.com/questions/16694907/download-large-file-in-python-with-requests)\n",
+    "# Download the full 'DOB Job Application Fiings' dataset.\n",
     "\n",
     "import gzip\n",
-    "import requests\n",
     "\n",
-    "url = 'https://data.cityofnewyork.us/api/views/ic3t-wcy2/rows.tsv?accessType=DOWNLOAD'\n",
+    "from openclean.data.source.socrata import Socrata\n",
+    "\n",
+    "\n",
     "outfile = './ic3t-wcy2.tsv.gz'\n",
     "\n",
-    "with requests.get(url, stream=True) as r:\n",
-    "    r.raise_for_status()\n",
-    "    with gzip.open(outfile, 'wb') as f:\n",
-    "        for chunk in r.iter_content(chunk_size=8192):\n",
-    "            f.write(chunk)"
+    "with gzip.open(outfile, 'wb') as f:\n",
+    "    Socrata().dataset('ic3t-wcy2').write(f)"
    ]
   },
   {
@@ -131,7 +127,7 @@
       "  'GIS_NTA_NAME'\n",
       "  'GIS_BIN'\n",
       "\n",
-      "1761170 rows.\n"
+      "1761502 rows.\n"
      ]
     }
    ],
