--- a/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
@@ -4,11 +4,42 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading ...\n",
+      "\n",
+      "Parking Violations Issued - Fiscal Year 2014\n",
+      "\n",
+      "Parking Violations Issuance datasets contain violations issued during the respective fiscal year.  The Issuance datasets are not updated to reflect violation status, the information only represents the violation(s) at the time they are issued. Since appearing on an issuance dataset, a violation may have been paid, dismissed via a hearing, statutorily expired, or had other changes to its status. To see the current status of outstanding parking violations, please look at the Open Parking & Camera Violations dataset.</p>\r\n",
+      "• Parking Violations Issued Fiscal Year 2020 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2020/pvqr-7yc4\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2019 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2019/faiq-9dfq\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2018 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2018/a5td-mswe\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2017 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2017/2bnn-yakx\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2016 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2016/kiv2-tbus\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2015 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2015/c284-tqph\">here</a>\r\n",
+      "• Parking Violations Issued Fiscal Year 2014 can be found <a href=\"https://data.cityofnewyork.us/City-Government/Parking-Violations-Issued-Fiscal-Year-2014/jt7v-77mi\">here</a>\n"
+     ]
+    }
+   ],
    "source": [
-    "from openclean.data.load import stream\n",
+    "# Download the full 'DOB Job Application Fiings' dataset.\n",
     "\n",
-    "df = stream('jt7v-77mi.tsv')"
+    "import gzip\n",
+    "\n",
+    "from openclean.data.source.socrata import Socrata\n",
+    "\n",
+    "\n",
+    "outfile = './jt7v-77mi.tsv.gz'\n",
+    "\n",
+    "with gzip.open(outfile, 'wb') as f:\n",
+    "    ds = Socrata().dataset('jt7v-77mi')\n",
+    "    print('Downloading ...\\n')\n",
+    "    print(ds.name + '\\n')\n",
+    "    print(ds.description)\n",
+    "    ds.write(f)"
    ]
   },
   {
@@ -20,73 +51,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Summons Number\n",
-      "1 Plate ID\n",
-      "2 Registration State\n",
-      "3 Plate Type\n",
-      "4 Issue Date\n",
-      "5 Violation Code\n",
-      "6 Vehicle Body Type\n",
-      "7 Vehicle Make\n",
-      "8 Issuing Agency\n",
-      "9 Street Code1\n",
-      "10 Street Code2\n",
-      "11 Street Code3\n",
-      "12 Vehicle Expiration Date\n",
-      "13 Violation Location\n",
-      "14 Violation Precinct\n",
-      "15 Issuer Precinct\n",
-      "16 Issuer Code\n",
-      "17 Issuer Command\n",
-      "18 Issuer Squad\n",
-      "19 Violation Time\n",
-      "20 Time First Observed\n",
-      "21 Violation County\n",
-      "22 Violation In Front Of Or Opposite\n",
-      "23 Number\n",
-      "24 Street\n",
-      "25 Intersecting Street\n",
-      "26 Date First Observed\n",
-      "27 Law Section\n",
-      "28 Sub Division\n",
-      "29 Violation Legal Code\n",
-      "30 Days Parking In Effect\n",
-      "31 From Hours In Effect\n",
-      "32 To Hours In Effect\n",
-      "33 Vehicle Color\n",
-      "34 Unregistered Vehicle?\n",
-      "35 Vehicle Year\n",
-      "36 Meter Number\n",
-      "37 Feet From Curb\n",
-      "38 Violation Post Code\n",
-      "39 Violation Description\n",
-      "40 No Standing or Stopping Violation\n",
-      "41 Hydrant Violation\n",
-      "42 Double Parking Violation\n"
+      "Schema\n",
+      "------\n",
+      "  'Summons Number'\n",
+      "  'Plate ID'\n",
+      "  'Registration State'\n",
+      "  'Plate Type'\n",
+      "  'Issue Date'\n",
+      "  'Violation Code'\n",
+      "  'Vehicle Body Type'\n",
+      "  'Vehicle Make'\n",
+      "  'Issuing Agency'\n",
+      "  'Street Code1'\n",
+      "  'Street Code2'\n",
+      "  'Street Code3'\n",
+      "  'Vehicle Expiration Date'\n",
+      "  'Violation Location'\n",
+      "  'Violation Precinct'\n",
+      "  'Issuer Precinct'\n",
+      "  'Issuer Code'\n",
+      "  'Issuer Command'\n",
+      "  'Issuer Squad'\n",
+      "  'Violation Time'\n",
+      "  'Time First Observed'\n",
+      "  'Violation County'\n",
+      "  'Violation In Front Of Or Opposite'\n",
+      "  'Number'\n",
+      "  'Street'\n",
+      "  'Intersecting Street'\n",
+      "  'Date First Observed'\n",
+      "  'Law Section'\n",
+      "  'Sub Division'\n",
+      "  'Violation Legal Code'\n",
+      "  'Days Parking In Effect    '\n",
+      "  'From Hours In Effect'\n",
+      "  'To Hours In Effect'\n",
+      "  'Vehicle Color'\n",
+      "  'Unregistered Vehicle?'\n",
+      "  'Vehicle Year'\n",
+      "  'Meter Number'\n",
+      "  'Feet From Curb'\n",
+      "  'Violation Post Code'\n",
+      "  'Violation Description'\n",
+      "  'No Standing or Stopping Violation'\n",
+      "  'Hydrant Violation'\n",
+      "  'Double Parking Violation'\n",
+      "\n",
+      "9100278 rows.\n"
      ]
     }
    ],
    "source": [
-    "for i, col in enumerate(df.columns):\n",
-    "    print('{} {}'.format(i, col))"
+    "# Verify that the download was successful. Print dataset columns and number of rows.\n",
+    "# This example makes use of the streaming option to avoid loading the full data frame\n",
+    "# into memory.\n",
+    "\n",
+    "from openclean.pipeline import stream\n",
+    "\n",
+    "df = stream(outfile)\n",
+    "\n",
+    "\n",
+    "print('Schema\\n------')\n",
+    "for col in df.columns:\n",
+    "    print(\"  '{}'\".format(col))\n",
+    "    \n",
+    "print('\\n{} rows.'.format(df.count()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openclean.function.eval.domain import IsNotIn\n",
-    "\n",
-    "df = df\\\n",
-    "    .select('Plate ID', 'Registration State', 'Plate Type', 'Meter Number', 'Street')\\\n",
-    "    .where(IsNotIn('Meter Number', set({'-', ''})), limit=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +153,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>656</th>\n",
+       "      <th>661</th>\n",
        "      <td>FXY1858</td>\n",
        "      <td>NY</td>\n",
        "      <td>PAS</td>\n",
@@ -127,7 +161,7 @@
        "      <td>QUEENS BLVD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>775</th>\n",
+       "      <th>780</th>\n",
        "      <td>89988JX</td>\n",
        "      <td>NY</td>\n",
        "      <td>COM</td>\n",
@@ -135,7 +169,7 @@
        "      <td>FRESH POND TRD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>896</th>\n",
+       "      <th>901</th>\n",
        "      <td>FGX2747</td>\n",
        "      <td>NY</td>\n",
        "      <td>PAS</td>\n",
@@ -143,7 +177,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2278</th>\n",
+       "      <th>2287</th>\n",
        "      <td>23161JR</td>\n",
        "      <td>NY</td>\n",
        "      <td>COM</td>\n",
@@ -151,106 +185,58 @@
        "      <td>WEST 42 STREET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2337</th>\n",
+       "      <th>2346</th>\n",
        "      <td>47153MC</td>\n",
        "      <td>NY</td>\n",
        "      <td>COM</td>\n",
        "      <td>144-3987</td>\n",
        "      <td>W 40TH ST</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15234</th>\n",
-       "      <td>52327MC</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>143-5290</td>\n",
-       "      <td>W 46 ST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15236</th>\n",
-       "      <td>GDD5247</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>PAS</td>\n",
-       "      <td>144-3955</td>\n",
-       "      <td>W 41 ST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15237</th>\n",
-       "      <td>GCG3058</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>PAS</td>\n",
-       "      <td>144-3955</td>\n",
-       "      <td>W 41 ST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15252</th>\n",
-       "      <td>93552MB</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>144-6713</td>\n",
-       "      <td>WEST 43 RD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15270</th>\n",
-       "      <td>89962JA</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>143-5983</td>\n",
-       "      <td>WEST 43RD STREET</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Plate ID Registration State Plate Type Meter Number            Street\n",
-       "656    FXY1858                 NY        PAS     407-3018       QUEENS BLVD\n",
-       "775    89988JX                 NY        COM         3  -    FRESH POND TRD\n",
-       "896    FGX2747                 NY        PAS     504-3043                  \n",
-       "2278   23161JR                 NY        COM     144-3942    WEST 42 STREET\n",
-       "2337   47153MC                 NY        COM     144-3987         W 40TH ST\n",
-       "...        ...                ...        ...          ...               ...\n",
-       "15234  52327MC                 NY        COM     143-5290           W 46 ST\n",
-       "15236  GDD5247                 NY        PAS     144-3955           W 41 ST\n",
-       "15237  GCG3058                 NY        PAS     144-3955           W 41 ST\n",
-       "15252  93552MB                 NY        COM     144-6713        WEST 43 RD\n",
-       "15270  89962JA                 NY        COM     143-5983  WEST 43RD STREET\n",
-       "\n",
-       "[100 rows x 5 columns]"
+       "     Plate ID Registration State Plate Type Meter Number          Street\n",
+       "661   FXY1858                 NY        PAS     407-3018     QUEENS BLVD\n",
+       "780   89988JX                 NY        COM         3  -  FRESH POND TRD\n",
+       "901   FGX2747                 NY        PAS     504-3043                \n",
+       "2287  23161JR                 NY        COM     144-3942  WEST 42 STREET\n",
+       "2346  47153MC                 NY        COM     144-3987       W 40TH ST"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df\n"
+    "# Get the first 100 rows where the parking meter number is not undefined.\n",
+    "\n",
+    "from openclean.function.eval.domain import IsNotIn\n",
+    "\n",
+    "df = df\\\n",
+    "    .select(['Plate ID', 'Registration State', 'Plate Type', 'Meter Number', 'Street'])\\\n",
+    "    .where(IsNotIn('Meter Number', set({'-', ''})), limit=100)\\\n",
+    "    .to_df()\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.operator import fd_violations\n",
+    "from openclean.operator.map.violations import fd_violations\n",
     "\n",
     "groups = fd_violations(df, lhs='Meter Number', rhs='Street')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,17 +244,13 @@
      "output_type": "stream",
      "text": [
       "144-3942 2\n",
-      "126-4949 3\n",
-      "144-6383 2\n",
       "144-3937 5\n",
       "143-3785 5\n",
       "144-6376 5\n",
       "144-3958 3\n",
       "144-3955 8\n",
       "144-6088 4\n",
-      "144-6055 3\n",
       "144-6377 3\n",
-      "140-5726 2\n",
       "143-5983 3\n",
       "140-5816 2\n",
       "105-8347 2\n"
@@ -282,36 +264,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "144-3942\tCounter({'WEST 42 STREET': 1, 'WEST 42 ST': 1})\n",
-      "126-4949\tCounter({'2nd Ave': 3})\n",
-      "144-6383\tCounter({'9TH AVE': 2})\n",
-      "144-3937\tCounter({'WEST 42 STREET': 3, 'WEST 42 ST': 1, 'W 42ND ST': 1})\n",
-      "143-3785\tCounter({'WEST 43RD ST': 3, 'WEST 43 ST': 1, 'W 43RD ST': 1})\n",
-      "144-6376\tCounter({'8TH AVENUE': 3, '8TH AVE': 2})\n",
-      "144-3958\tCounter({'WEST 41ST STREET': 2, '7TH AVENUE': 1})\n",
-      "144-3955\tCounter({'W 41 ST': 4, 'W 41ST STREET': 3, 'TIMES SQUARE': 1})\n",
-      "144-6088\tCounter({'WEST 36 STREET': 3, 'W 36TH ST': 1})\n",
-      "144-6055\tCounter({'W 37TH ST': 3})\n",
-      "144-6377\tCounter({'35 ST': 1, 'W 35 ST': 1, '8TH AVENUE': 1})\n",
-      "140-5726\tCounter({'W 53RD STREET': 2})\n",
-      "143-5983\tCounter({'W 43RD STREET': 2, 'WEST 43RD STREET': 1})\n",
-      "140-5816\tCounter({'8TH AVE': 1, 'WEST 45TH STREET': 1})\n",
-      "105-8347\tCounter({'WEST 181 ST': 1, 'W 181 ST': 1})\n"
+      "Meter Number | Street (Count)\n",
+      "=============|===============\n",
+      "144-3942     | 1 x WEST 42 STREET\n",
+      "             | 1 x WEST 42 ST\n",
+      "-------------|---------------\n",
+      "144-3937     | 3 x WEST 42 STREET\n",
+      "             | 1 x WEST 42 ST\n",
+      "             | 1 x W 42ND ST\n",
+      "-------------|---------------\n",
+      "143-3785     | 3 x WEST 43RD ST\n",
+      "             | 1 x WEST 43 ST\n",
+      "             | 1 x W 43RD ST\n",
+      "-------------|---------------\n",
+      "144-6376     | 3 x 8TH AVENUE\n",
+      "             | 2 x 8TH AVE\n",
+      "-------------|---------------\n",
+      "144-3958     | 2 x WEST 41ST STREET\n",
+      "             | 1 x 7TH AVENUE\n",
+      "-------------|---------------\n",
+      "144-3955     | 4 x W 41 ST\n",
+      "             | 3 x W 41ST STREET\n",
+      "             | 1 x TIMES SQUARE\n",
+      "-------------|---------------\n",
+      "144-6088     | 3 x WEST 36 STREET\n",
+      "             | 1 x W 36TH ST\n",
+      "-------------|---------------\n",
+      "144-6377     | 1 x 35 ST\n",
+      "             | 1 x W 35 ST\n",
+      "             | 1 x 8TH AVENUE\n",
+      "-------------|---------------\n",
+      "143-5983     | 2 x W 43RD STREET\n",
+      "             | 1 x WEST 43RD STREET\n",
+      "-------------|---------------\n",
+      "140-5816     | 1 x 8TH AVE\n",
+      "             | 1 x WEST 45TH STREET\n",
+      "-------------|---------------\n",
+      "105-8347     | 1 x WEST 181 ST\n",
+      "             | 1 x W 181 ST\n",
+      "-------------|---------------\n"
      ]
     }
    ],
    "source": [
-    "from openclean.function.distinct import distinct\n",
+    "from openclean.operator.collector.count import distinct\n",
     "\n",
+    "print('Meter Number | Street (Count)')\n",
+    "print('=============|===============')\n",
     "for key in groups:\n",
-    "    print('{}\\t{}'.format(key, distinct(groups.get(key), 'Street')))"
+    "    conflicts = distinct(groups.get(key), 'Street').most_common()\n",
+    "    street, count = conflicts[0]\n",
+    "    print('{:<12} | {} x {}'.format(key, count, street))\n",
+    "    for street, count in conflicts[1:]:\n",
+    "        print('             | {} x {}'.format(count, street))\n",
+    "    print('-------------|---------------')"
    ]
   }
  ],
